2014-05-15  Junichi Satoh <junichi@rworks.jp>

	* util/pandora_manage.pl: Added support for 'each_ff' and 'ff_timeout' 
	to module creation and modifying options.
	Fixed bug that 'enable_unkown_events' cannot be set by module creation
	options.

2014-06-14  Akihiro Uchida <auchida@rworks.jp>

	* pandora_server/pandora_server.redhat.spec: allow
	  tty-less sudo for pandora to fix failure on start
	  tentacle_serverd service in recent RHEL derivatives.

2014-06-12  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Removed the keepalive semaphore, since down_force
	  is not supported in earlier versions of Thread::Semaphore. Made keep alive
	  modules work with an FF threshold.

2014-06-11  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Prevent race conditions between keep_alive and
	  keep_alive_nd.

2014-06-08  Junichi Satoh <junichi@rworks.jp>

	* FreeBSD/pandora_server.conf, NetBSD/pandora_server.conf: Updated
	default settings as the same as Linux ones.
	
014-06-05  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/PluginServer.pm
	lib/PandoraFMS/Core.pm: Add tags name macro to alerts and plugins.
	Add tags phones to plugins. Ticket #568

2014-06-04  Mario Pulido  <mario.pulido@artica.es>

	* conf/pandora_server.conf.new: Fixed bug

2014-06-03  Ramon Novoa  <rnovoa@artica.es>

	* util/recon_scripts/snmp-recon.pl: Create a ping module for agents that do
	  not respond to SNMP.

2014-06-03  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/Core.pm: Changed to ignore 'FF timeout' except async
	modules.

2014-05-31  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/Core.pm: Improved 'FF threshold' to be able to define
	timeout.

2014-05-30  Sancho Lerena <slerena@artica.es>

	* conf/pandora_server.conf.new: Review of default configuration file.

	* pandora_server.redhat.spec,
	  pandora_server.spec,
	  DEBIAN/control: Added perl telnet module as dependency.

2014-05-30  Ramon Novoa  <rnovoa@artica.es>
